--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/dbgirl
+    url: jdbc:mysql://localhost:3306/dbgirl?useUnicode=true&characterEncoding=utf-8
     #url: jdbc:mysql://192.168.2.70/:3306/sell
 
     username: root
